Update InfiniteSculk.java